@@ -1,6 +1,8 @@
 package com.quickticket.quickticket.domain.review.service;
 
+import com.quickticket.quickticket.domain.review.domain.Review;
 import com.quickticket.quickticket.domain.review.dto.ReviewResponse;
+import com.quickticket.quickticket.domain.review.mapper.ReviewMapper;
 import com.quickticket.quickticket.domain.review.repository.ReviewRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -17,12 +19,12 @@ public class ReviewService {
     public List<ReviewResponse.EventPageReviewListItem> getEventResponseByEventId(Long eventId) {
         return repository.getByEvent_EventId(eventId).stream()
                 .map(ReviewResponse.EventPageReviewListItem::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Review> getReviewsByEventId(Long eventId) {
         return repository.getByEvent_EventId(eventId).stream()
             .map(mapper::toDomain)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
